demo-mobile/css/main.css
body {
  //padding-top: 40px;
  //padding-bottom: 40px;
  background-color: #eee;
    color: #444;
}

.form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
  text-align: center;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
  text-align: left;
}
.form-signin .checkbox {
  font-weight: normal;
}
.form-signin .form-control {
  position: relative;
  font-size: 16px;
  height: auto;
  padding: 10px;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input[type="text"] {
  margin-bottom: -1px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.form-signin input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}


img{
  vertical-align: middle;
height: 160px;
width: 160px;
text-align: center;
margin-top: 32px;
}

//HELPERS

.no-padding{
  padding: 0 !important;
}

.no-margin{
  margin: 0px !important;
}

.topbar{
  background-color: rgb(233, 233, 233);
  position: fixed;
  width: 100%;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.11);
  min-height: 47px;
  text-align: center;
  padding-top: 16px;
  font-weight: bold;
  z-index: 1000;
}

.topbar i{
  font-size: 20px;
  margin-top: -4px;
}

.bottombar{
  background-color: rgb(233, 233, 233);
  position: fixed;
  width: 100%;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.11);
  min-height: 47px;
  text-align: center;
  padding-top: 16px;
  font-weight: bold;
  z-index: 1000;
  bottom: 0px;
}

.box-container{
    margin-top: 46px;
}

.box{
  background-color: #fefefe;
  border: 1px solid rgb(224, 224, 224);
  border-top: 1px solid transparent;
  //border-radius: 3px;
  margin-right: 3px;
  margin-left: 3px;
  min-height: 60px;
}

.box table{
  font-size: 20px;
}

.box.selected{
  background-color: rgb(175, 175, 175);
  margin-top: 12px;
  margin-bottom: 12px;
}

.box .name{
font-size: 13px;
text-align: left;
display: inline-block;
margin-top: 22px;
}

.box.selected .name{
  //font-weight: bold;
  color: #fff;
}

.box .code{
  background-color: rgb(162, 162, 162);
  float: left;
  min-width: 91px;
  max-width: 91px;
  color: #fff;
  font-size: 27px;
  margin: 10px;
  padding: 0px;
  height: 38px;
  text-align: center;
  display: inline-block;
  margin-top: 11px;

}

.box.selected .code{
  color: #666;
  background-color: rgb(255, 255, 255);
}

.box .detail{
  margin-top: 0px
}


.box .detail .btn-toolbar{
  padding: 10px;
}

.box table{
  background-color: rgb(255, 255, 255);
  margin-bottom: 0px;
  font-size: 16px;
}
.box table.table.table-striped > tbody > tr:nth-child(odd) > td{
  background-color: rgb(247, 247, 247);
}
.box table.table tr td{
  border-top: 1px solid transparent;
}


.bottombar{
  opacity:1;
  bottom: 0px;
  padding-bottom: 14px;
  position: fixed;
}
.bottombar.ng-hide-add, 
.bottombar.ng-hide-remove{
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;
  display:block !important;
  opacity:0;
  bottom: 0px;
}
 
.bottombar.ng-hide-add.ng-hide-add-active,
.bottombar.ng-hide-remove{
  opacity:0;
  bottom: -50px;
}

.bottombar.ng-hide-add,
.bottombar.ng-hide-remove.ng-hide-remove-active{
  opacity:1;
  bottom: 0px;
}

.bottombar.ng-hide{
  display: none;
}

/*
.animate-show{
  float: left;
}


.animate-show.ng-hide-add, 
.animate-show.ng-hide-remove {
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;
  display:block!important;
  opacity:0;
}
 
.animate-show.ng-hide-add.ng-hide-add-active,
.animate-show.ng-hide-remove {
  opacity:0;
}
.animate-show.ng-hide-add,
.animate-show.ng-hide-remove.ng-hide-remove-active {
  display: none;
}

.animate-show.ng-hide-add,
.animate-show.ng-hide-remove.ng-hide-remove-active {
  opacity:1;
}
*/
/*



.animate-enter, 
.animate-leave
{ 
    -webkit-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    -moz-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    -ms-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    -o-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
} 
 
.animate-enter {
    left: 100%;
}
.animate-enter.animate-enter-active {
    left: 0;
}
 
.animate-leave {
    left: 0;
}

*/

